Moved modal state management to ModalContext and wrapped Homepage in ModalProvider. Fixes duplicate component renders.

--- a/app/components/AboutModal.module.css
+++ b/app/components/AboutModal.module.css
@@ -15,7 +15,7 @@
 }
 
 .modalContent {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0, .5);
   color: white;
   padding: 2rem;
   margin-top: calc(60px + 0px);
